--- a/index.html
+++ b/index.html
@@ -176,6 +176,45 @@
                 </div>
             </div>
         </section>
+        <section class="work">
+            <div class="container">
+                <h2 class="work__heading">
+                    How it works
+                </h2>
+                <p class="work__desc">
+                    Exceptional dental care for all ages. Your great smile begins with a great dentist.
+                </p>
+                <div class="work__list">
+                    <!-- work-item 1 -->
+                    <div class="work-item">
+                        <img src="./assets/icons/Orion_search.svg" alt="search">
+                        <h3 class="work-item__heading">Search doctor</h3>
+                        <p class="work-item__desc">
+                            Search a doctor by education, qualifications or experience-contact for inquiry.
+                        </p>
+                        <a href="#!" class="work-item__more">Learn more</a>
+                    </div>
+                    <!-- work-item 2 -->
+                    <div class="work-item">
+                        <img src="./assets/icons/Orion_find-user.svg" alt="search">
+                        <h3 class="work-item__heading">Find best doctor</h3>
+                        <p class="work-item__desc">
+                            Search a doctor by education, qualifications or experience-contact for inquiry.
+                        </p>
+                        <a href="#!" class="work-item__more">Learn more</a>
+                    </div>
+                    <!-- work-item 3 -->
+                    <div class="work-item">
+                        <img src="./assets/icons/Orion_first-aid-kit.svg" alt="search">
+                        <h3 class="work-item__heading">Get treatment</h3>
+                        <p class="work-item__desc">
+                            Search a doctor by education, qualifications or experience-contact for inquiry.
+                        </p>
+                        <a href="#!" class="work-item__more">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
