--- a/index.html
+++ b/index.html
@@ -235,6 +235,75 @@
                 </div>
             </div>
         </section>
+        <section class="member">
+            <div class="container">
+                <header class="member__header">
+                    <h2 class="member__heading">
+                        Our virtual dentist
+                    </h2>
+                    <a href="#!" class="btn member__cta">Meet our dentist</a>
+                </header>
+                <div class="member__list">
+                    <!-- member 1 -->
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/member-01.png" alt="" class="member-item__img">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>
+                        <p class="member-item__title">DDS, California - Linda University</p>
+                    </article>
+
+                    <!-- member 2 -->
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/member-02.png" alt="" class="member-item__img">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>
+                        <p class="member-item__title">DDS, California - Linda University</p>
+                    </article>
+
+                    <!-- member 3 -->
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/member-03.png" alt="" class="member-item__img">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>
+                        <p class="member-item__title">DDS, California - Linda University</p>
+                    </article>
+
+                    <!-- member 4 -->
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/member-04.png" alt="" class="member-item__img">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>
+                        <p class="member-item__title">DDS, California - Linda University</p>
+                    </article>
+                </div>
+
+                <div class="member__control">
+                    <!-- Previous -->
+                    <button class="member__control-btn">
+                        <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+
+                    <!-- Next -->
+                    <button class="member__control-btn">
+                        <svg class="member__control-next-icon" width="6" height="12" viewBox="0 0 6 12" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="install">
+
+        </section>
     </main>
 </body>
 
