--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                     </article>
                 </div>
 
-                <div class="member__control">
+                <div class="member__control control">
                     <!-- Previous -->
-                    <button class="member__control-btn">
+                    <button class="control__btn">
                         <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
                                 stroke-linejoin="round" />
@@ -291,9 +291,8 @@
                     </button>
 
                     <!-- Next -->
-                    <button class="member__control-btn">
-                        <svg class="member__control-next-icon" width="6" height="12" viewBox="0 0 6 12" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
+                    <button class="control__btn">
+                        <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
                                 stroke-linejoin="round" />
                         </svg>
@@ -301,10 +300,107 @@
                 </div>
             </div>
         </section>
-        <section class="install">
 
+        <section class="install">
+            <div class="container">
+                <div class="install__inner">
+                    <figure>
+                        <img src="./assets/img/mobile-app.png" alt="" class="install__phone">
+                    </figure>
+                    <section class="install__content">
+                        <h2 class="install__heading">Take back your smile with dentures</h2>
+                        <p class="install__desc">If you're missing multiple teeth due to decay, injury, or the natural
+                            aging
+                            process, dentures might be the perfect solution.</p>
+                        <div class="install__row">
+                            <a href="#!">
+                                <img src="./assets/img/app-store.svg" alt="" class="install__btn-img">
+                            </a>
+                            <a href="#!">
+                                <img src="./assets/img/google-play.svg" alt="" class="install__btn-img">
+                            </a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+        <section class="news">
+            <div class="container">
+                <div class="news__inner">
+                    <section class="news__content">
+                        <h2 class="news__heading">Read Latest News & Events.</h2>
+                        <a href="#!" class="news__more">Read All Blog</a>
+                        <div class="news__control control">
+                            <!-- Previous -->
+                            <button class="control__btn">
+                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </button>
+
+                            <!-- Next -->
+                            <button class="control__btn">
+                                <svg width="6" height="12" viewBox="0 0 6 12" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                    </section>
+                    <div class="news__list">
+                        <article class="new-item">
+                            <figure>
+                                <a href="#!">
+                                    <img src="./assets/img/news-01.jpg" alt="" class="news__thumb">
+                                </a>
+                            </figure>
+                            <section class="news-item__body">
+                                <h3 class="news-item__heading">Key Considerations for Regulatory Compliant.</h3>
+                                <p class="news-item__desc">It's easy to think about medical care from a narrow
+                                    perspective. You go to the hospital.</p>
+                                <a href="#!" class="news-item__lean-more">Learn More</a>
+                            </section>
+                        </article>
+                        <article class="new-item">
+                            <figure>
+                                <a href="#!">
+                                    <img src="./assets/img/news-02.jpg" alt="" class="news__thumb">
+                                </a>
+                            </figure>
+                            <section class="news-item__body">
+                                <h3 class="news-item__heading">What Is Population Health Management?</h3>
+                                <p class="news-item__desc">It's easy to think about medical care from a narrow
+                                    perspective. You go to the hospital.</p>
+                                <a href="#!" class="news-item__lean-more">Learn More</a>
+                            </section>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="appointment">
+            <div class="container">
+                <div class="appointment__inner">
+                    <h2 class="appointment__heading">Always welcoming new patients</h2>
+                    <p class="appointment__desc">Take control of your dental health and get the personalized care you
+                        deserve. Call (541) 772-8846 to schedule</p>
+                    <a href="#!" class="btn">Appointment</a>
+                </div>
+            </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
