--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                         <img src="./assets/img/service-01.png" alt="" class="service__img">
                     </figure>
                     <div class="service__cta-wrap">
-                        <a href="#!" class="btn service__cta">
-                            View All Services
+                        <a href="#!" class="btn service__cta btn-4">
+                            <span>View All Services</span>
                         </a>
                     </div>
                 </div>
@@ -337,6 +337,155 @@
                         </a>
                     </article>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Staff -->
+    <section class="staff">
+        <div class="container">
+            <p class="staff__desc">Pet Care Staff</p>
+            <h2 class="section-heading staff__heading">
+                Meet Our Groomers
+            </h2>
+
+            <div class="staff__list">
+                <!-- Staff item 1 -->
+                <article class="staff-item">
+                    <figure class="staff-item__img-wrap">
+                        <img src="./assets/img/staff-01.png" alt="" class="staff-item__img" />
+                    </figure>
+                    <p class="staff-item__title">Pet Trainer</p>
+                    <h3 class="staff-item__name">Meghan Samit</h3>
+                </article>
+
+                <!-- Staff item 2 -->
+                <article class="staff-item">
+                    <figure class="staff-item__img-wrap">
+                        <img src="./assets/img/staff-02.png" alt="" class="staff-item__img" />
+                    </figure>
+                    <p class="staff-item__title">Veterinarian</p>
+                    <h3 class="staff-item__name">Alissa Silva</h3>
+                </article>
+
+                <!-- Staff item 3 -->
+                <article class="staff-item">
+                    <figure class="staff-item__img-wrap">
+                        <img src="./assets/img/staff-03.png" alt="" class="staff-item__img" />
+                    </figure>
+                    <p class="staff-item__title">Veterinarian</p>
+                    <h3 class="staff-item__name">Cindy Harris</h3>
+                </article>
+
+                <!-- Staff item 4 -->
+                <article class="staff-item">
+                    <figure class="staff-item__img-wrap">
+                        <img src="./assets/img/staff-04.png" alt="" class="staff-item__img" />
+                    </figure>
+                    <p class="staff-item__title">Animal Caretaker</p>
+                    <h3 class="staff-item__name">Lucas Tony</h3>
+                </article>
+            </div>
+
+            <div class="staff__cta-wrap">
+                <a href="#!" class="btn staff__cta btn-4" >
+                    <span>View All Team</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pricing -->
+    <section class="pricing">
+        <div class="container pricing__container">
+            <h2 class="pricing__heading">
+                The Best Choice
+            </h2>
+            <p class="pricing__desc">
+                We offer long-term and short-term boarding. Every dog
+                has its own private, spacious room and daily individual
+                time in our large play yard.
+            </p>
+
+            <div class="pricing__switch-wrap">
+                <div class="pricing__switch">
+                    <input type="checkbox" id="pricing-switch" class="pricing__switch-input" checked hidden>
+                    <label for="pricing-switch" class="pricing__switch-label">
+                        <span class="pricing__switch-value">Monthly</span>
+                        <span class="pricing__switch-value">Yearly</span>
+                    </label>
+                </div>
+            </div>
+
+            <div class="pricing__list">
+                <!-- Pricing item 1 -->
+                <article class="pricing-item">
+                    <p class="pricing-item__type">Basic</p>
+                    <h3 class="pricing-item__heading">Day care</h3>
+                    <p class="pricing-item__price">$150</p>
+                    <button class="btn pricing-item__btn">
+                        Purchase Now
+                    </button>
+                    <ul class="pricing-item__list">
+                        <li class="pricing-item__item">Single room</li>
+                        <li class="pricing-item__item">
+                            Socialist Exercise
+                        </li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">
+                            Spa and Grooming
+                        </li>
+                        <li class="pricing-item__item">Exercise 2x</li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">Grooming 2x</li>
+                    </ul>
+                </article>
+
+                <!-- Pricing item 2 -->
+                <article class="pricing-item pricing-item--active">
+                    <p class="pricing-item__type">Exclusive</p>
+                    <h3 class="pricing-item__heading">2X Care</h3>
+                    <p class="pricing-item__price">$199</p>
+                    <button class="btn btn--primary pricing-item__btn">
+                        Purchase Now
+                    </button>
+                    <ul class="pricing-item__list">
+                        <li class="pricing-item__item">Single room</li>
+                        <li class="pricing-item__item">
+                            Socialist Exercise
+                        </li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">
+                            Spa and Grooming
+                        </li>
+                        <li class="pricing-item__item">Exercise 2x</li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">Grooming 2x</li>
+                    </ul>
+                </article>
+
+                <!-- Pricing item 3 -->
+                <article class="pricing-item">
+                    <p class="pricing-item__type">Platinum</p>
+                    <h3 class="pricing-item__heading">4X Care</h3>
+                    <p class="pricing-item__price">$299</p>
+                    <button class="btn pricing-item__btn">
+                        Purchase Now
+                    </button>
+                    <ul class="pricing-item__list">
+                        <li class="pricing-item__item">Single room</li>
+                        <li class="pricing-item__item">
+                            Socialist Exercise
+                        </li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">
+                            Spa and Grooming
+                        </li>
+                        <li class="pricing-item__item">Exercise 2x</li>
+                        <li class="pricing-item__item">Custom Meals</li>
+                        <li class="pricing-item__item">Grooming 2x</li>
+                    </ul>
+                </article>
             </div>
         </div>
     </section>
